@@ -53,7 +53,13 @@ struct domain
 	/* for the DS case we must answer on the parent side of zone cut */
 	domain_type *nsec3_ds_parent_cover;
 	/* the NSEC3 domain that has a hash-base32 <= than this dname. */
-	/* or NULL (no smaller on within this zone) */
+	/* or NULL (no smaller one within this zone)
+	 * this variable is used to look up the NSEC3 record that matches
+	 * or covers a given b64-encoded-hash-string domain name. 
+	 * The result of the lookup is stored in the *_cover variables. 
+	 * The variable makes it possible to perform a rbtree lookup for
+	 * a name, then take this 'jump' to the previous element that contains
+	 * an NSEC3 record, with hopefully the correct parameters. */
 	domain_type *nsec3_lookup;
 #endif
 	uint32_t     number; /* Unique domain name number.  */
